small fix on 3d model z-index

--- a/css/general.css
+++ b/css/general.css
@@ -52,5 +52,5 @@ main {
 model-viewer {
 	width: 100%;
 	height: 30rem;
-	z-index: -1;
+	z-index: 0;
 }
